// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--help snapshots > agent 1`] = `
"Usage: testsprite agent [options] [command]

Install TestSprite guidance into coding-agent config (Claude Code, Cursor,
Cline, Antigravity, Kiro, Windsurf, Copilot, Codex)

Options:
  -h, --help                      display help for command

Commands:
  install [options] [targets...]  Write the TestSprite agent skills
                                  (verification loop + first-run onboarding)
                                  into a project for a coding agent. Target(s)
                                  may be given positionally (e.g. \`agent
                                  install cursor codex\`) and/or via --target;
                                  the two are merged.
  list                            List the agent targets and skills this CLI
                                  can install and where each lands (run
                                  \`testsprite agent status\` to see what is
                                  installed here)
  status [options]                Check installed TestSprite skill files
                                  against this CLI version: ok, stale,
                                  modified, unmarked, absent, or corrupt (exits
                                  1 when anything needs attention, so it can
                                  gate CI)
  help [command]                  display help for command
"
`;

exports[`--help snapshots > agent install 1`] = `
"Usage: testsprite agent install [options] [targets...]

Write the TestSprite agent skills (verification loop + first-run onboarding)
into a project for a coding agent. Target(s) may be given positionally (e.g.
\`agent install cursor codex\`) and/or via --target; the two are merged.

Options:
  --target <t>    Agent target(s): claude, cursor, cline, antigravity, kiro,
                  windsurf, copilot, codex (comma-separated or repeated).
                  Merged with any positional target(s). (default: [])
  --skill <name>  Skill(s) to install: testsprite-verify, testsprite-onboard
                  (comma-separated or repeated; default: all) (default: [])
  --dir <path>    Project root to write into (default: cwd)
  --force         For own-file targets: overwrite existing file (a .bak backup
                  is kept). For codex (managed-section): replaces the section
                  unconditionally; user content outside the section is never
                  destroyed.
  -h, --help      display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > agent list 1`] = `
"Usage: testsprite agent list [options]

List the agent targets and skills this CLI can install and where each lands
(run \`testsprite agent status\` to see what is installed here)

Options:
  -h, --help  display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > auth 1`] = `
"Usage: testsprite auth [options] [command]

Manage TestSprite credentials

Options:
  -h, --help      display help for command

Commands:
  status          Show the user, API key, env, and scopes bound to the active
                  profile
  remove          Remove credentials for the active profile
  help [command]  display help for command
"
`;

exports[`--help snapshots > auth configure 1`] = `
"Usage: testsprite auth configure [options]

Options:
  --api-key <key>       API key to configure (skips the interactive prompt)
  --from-env            Read TESTSPRITE_API_KEY from the environment instead of
                        prompting (default: false)
  --agent <target>      Coding-agent target to install: claude, antigravity,
                        cursor, cline, kiro, windsurf, copilot, codex (default:
                        every agent detected in this project, or claude if
                        none)
  --no-agent            Skip the agent skill install (configure credentials
                        only)
  --force               Overwrite an existing skill file (a .bak backup is
                        kept)
  --dir <path>          Project root for the skill install (default: current
                        directory)
  -y, --yes             Non-interactive: accept all defaults, never prompt
  --skip-if-configured  Skip the API key prompt when credentials already exist
                        for this profile (CI-safe idempotent re-run)
  -h, --help            display help for command
"
`;

exports[`--help snapshots > auth logout 1`] = `
"Usage: testsprite auth logout [options]

Options:
  -h, --help  display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > auth whoami 1`] = `
"Usage: testsprite auth whoami [options]

Options:
  -h, --help  display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > ci 1`] = `
"Usage: testsprite ci [options] [command]

Scaffold CI integration for TestSprite

Options:
  -h, --help                 display help for command

Commands:
  init [options] <platform>  Write a CI workflow that runs your TestSprite
                             tests (platform: github)
  help [command]             display help for command
"
`;

exports[`--help snapshots > ci init 1`] = `
"Usage: testsprite ci init [options] <platform>

Write a CI workflow that runs your TestSprite tests (platform: github)

Options:
  --project <id>       project id to run (auto-detected if you have exactly
                       one)
  --filter <substr>    only run tests whose name contains this substring
  --timeout <s>        max seconds to wait for a terminal verdict (1-3600)
                       (default: "600")
  --path <file>        output path for the workflow (default:
                       ".github/workflows/testsprite.yml")
  --force              overwrite an existing workflow (a .bak backup is kept)
                       (default: false)
  --set-secret         set the TESTSPRITE_API_KEY repo secret via gh (if
                       installed + authenticated); OVERWRITES an existing
                       secret of that name (default: false)
  --repo <owner/name>  target repo for --set-secret (gh infers from the cwd if
                       omitted)
  -h, --help           display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > init 1`] = `
"Usage: testsprite init [options]

(deprecated) alias for \`setup\`

Options:
  --api-key <key>       API key to configure (skips the interactive prompt)
  --from-env            Read TESTSPRITE_API_KEY from the environment instead of
                        prompting (default: false)
  --agent <target>      Coding-agent target to install: claude, antigravity,
                        cursor, cline, kiro, windsurf, copilot, codex (default:
                        every agent detected in this project, or claude if
                        none)
  --no-agent            Skip the agent skill install (configure credentials
                        only)
  --force               Overwrite an existing skill file (a .bak backup is
                        kept)
  --dir <path>          Project root for the skill install (default: current
                        directory)
  -y, --yes             Non-interactive: accept all defaults, never prompt
  --skip-if-configured  Skip the API key prompt when credentials already exist
                        for this profile (CI-safe idempotent re-run)
  -h, --help            display help for command
"
`;

exports[`--help snapshots > project 1`] = `
"Usage: testsprite project [options] [command]

Manage TestSprite projects

Options:
  -h, --help                         display help for command

Commands:
  list [options]                     List projects visible to the API key
  
  Exit codes:
    0  success
    3  auth error
    5  validation error (e.g., bad --page-size)
   10  transport/network failure (UNAVAILABLE) — retry the command
  get <project-id>                   Get a project by id
  create [options]                   Create a new project
  update [options] <project-id>      Update project metadata
  delete [options] <project-id>      Permanently delete a project and everything under it (sub-projects,
  their tests, and backend fixtures). Requires --confirm.
  
  Exit codes:
    0  success
    3  auth error
    4  project not found (or already deleted)
    5  validation error (e.g., missing --confirm)
  credential [options] <project-id>  Set the static backend credential injected
                                     into every backend test
                                     (Bearer token / API key / Basic token /
                                     public). Free tier.
  auto-auth [options] <project-id>   Configure the recurring-token
                                     (auto-refresh login) for backend tests
                                     (Pro).
                                     A fresh token is fetched on each run and
                                     injected into every backend test.
  docs                               Manage project documents — the sources
                                     plan generation feeds on
  env                                Manage a project's environments — named
                                     URL + test-account bundles that \`test run
                                     --env <name>\` selects
  help [command]                     display help for command
"
`;

exports[`--help snapshots > project docs upload 1`] = `
"Usage: testsprite project docs upload [options] <file>

Upload an API spec or PRD as a project source (DEV-384). Three steps:
mint a presigned S3 URL, stream the file bytes to it, register the
document — which starts processing + embedding. The local file is
only read; nothing is written back to disk.

Exit codes:
  0  upload registered (processing started)
  3  auth error
  4  project not found (or not accessible in this workspace)
  5  validation error (missing/empty file, bad --role)
  7  request timeout (also: backend predates the docs routes)
 10  presigned S3 PUT failed — re-run to mint a fresh URL

Options:
  --project <id>             project id the document belongs to (required)
  --role <role>              document role: api-doc (API spec, default) | prd
  --name <display-name>      display name for the document (default: file
                             basename)
  --idempotency-key <token>  opaque idempotency token. Defaults to a UUIDv4
                             minted per invocation.
  -h, --help                 display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > project get 1`] = `
"Usage: testsprite project get [options] <project-id>

Get a project by id

Options:
  -h, --help  display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > project list 1`] = `
"Usage: testsprite project list [options]

List projects visible to the API key

Exit codes:
  0  success
  3  auth error
  5  validation error (e.g., bad --page-size)
 10  transport/network failure (UNAVAILABLE) — retry the command

Options:
  --page-size <n>           service page-size hint (1-100, default 25)
  --starting-token <token>  opaque cursor from a previous list response
  --max-items <n>           stop after this many items across auto-paged pages
  --columns <list>          select/reorder text table columns (comma-separated
                            keys)
  --no-header               suppress the text table header row
  -h, --help                display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test 1`] = `
"Usage: testsprite test [options] [command]

Inspect TestSprite tests

Options:
  -h, --help                            display help for command

Commands:
  list [options]                        List tests in a project
  get <test-id>                         Get a test by id
  create [options]                      Create a test from saved code
                                        (--code-file) or an agent-supplied plan
                                        (--plan-from, FE-only, M3.2 piece-5)
  create-batch [options]                Create multiple FE tests from a JSONL
                                        of plan specs (FE-only)
  scaffold [options]                    Emit a schema-correct starter test
                                        definition (frontend plan JSON by
                                        default, or a backend Python skeleton).
                                        Pure-local: no network, no credentials.
  open [options] <test-id>              Open the test in the TestSprite
                                        dashboard: prints the deep-link URL,
                                        then spawns your default browser unless
                                        --no-browser.
  steps [options] <test-id>             List the steps of the latest run (use
                                        --run-id for a specific run)
  diff <run-a> <run-b>                  Compare two runs and print what
                                        regressed: verdict, failureKind,
                                        failedStepIndex, per-step status flips,
                                        codeVersion drift. Exit 0 when verdicts
                                        match, 1 when they differ.
  lint [options]                        Validate plan/steps files offline with
                                        the same validators \`create\` runs,
                                        collecting EVERY problem. No network,
                                        no credentials. Exit 0 when all valid,
                                        5 otherwise.
  result [options] <test-id>            Get the latest result for a test (default) or list prior runs (--history).
  
  --output json shape differs by mode:
    (default)  single CliLatestResult object
    --history  { runs: RunHistoryItem[], nextCursor: string|null }
  
  Per-run detail: testsprite test wait <run-id>
  Failure bundle:  testsprite test artifact get <run-id>
  update [options] <test-id>            Update test metadata — name,
                                        description, priority, step timeout
  delete [options] <test-id>            Permanently delete a test. Requires
                                        --confirm. (M3.2 piece-3)
  delete-batch [options] [test-ids...]  Permanently delete multiple tests in one command. Requires --confirm.
  Use --all --project <id> to delete all tests in a project (optionally filtered by --status).
  
  Prints a per-test summary (Deleted N, Skipped M, Failed K) to stdout.
  
  Exit codes:
    0  all targeted tests deleted (or --dry-run)
    1  one or more deletions failed (server error)
    5  validation error (missing --confirm, missing --project with --all, etc.)
  
  Note: a 404 "not found" response is counted as skipped in the summary, not an error.
  run [options] [test-id]               Trigger a test run. With --wait, polls until terminal status.
  Use --all --project <id> for a wave-ordered batch run of all tests in a project (M4).
  
  Exit codes:
    0  passed (or queued without --wait)
    1  failed / blocked / cancelled
    3  auth error
    4  test not found
    5  validation error (e.g., bad --target-url, or positional + --all both set)
    6  conflict (already running — see nextAction for the active runId)
    7  timeout — resume with: testsprite test wait <run-id>, or stop it with: testsprite test cancel <run-id>
   10  transport/network failure (UNAVAILABLE) — retry the command
   11  rate limited — honor Retry-After
  
  On failure/blocked/cancelled, run: testsprite test artifact get <run-id>
  
  Ctrl-C during --wait detaches only (the run keeps executing and billing);
  stop it for real with: testsprite test cancel <run-id>
  wait [options] <run-id...>            Wait for one or more runs to reach a terminal status.
  
  With several run-ids the runs are polled concurrently under one shared
  --timeout and a {results, summary} envelope is printed (worst status wins
  the exit code), so every re-attach hint the CLI prints can be pasted as
  ONE command.
  
  Exit codes:
    0  passed
    1  failed / blocked / cancelled
    3  auth error
    4  run not found (single run-id; with several ids a per-member poll error
       is recorded as error:<CODE> in its row and folded into exit 7)
    7  timeout or per-member poll error — resume with: testsprite test wait <run-id...>
   10  transport/network failure (UNAVAILABLE) — retry the command
   11  rate limited, and nothing else went wrong — polls are retried
       automatically honoring Retry-After first, so this means the throttle
       outlasted that budget while the runs were still fine. Back off, then
       re-attach with test wait. (A throttle that instead consumes the whole
       --timeout reports 7, and any real timeout or failure keeps 7 / 1.)
  
  On failure/blocked/cancelled, run: testsprite test artifact get <run-id>
  
  Ctrl-C detaches only (the run keeps executing and billing); stop it for
  real with: testsprite test cancel <run-id...>
  rerun [options] [test-ids...]         Re-execute a test (or multiple) as a replay — FE replays the saved script, BE re-runs the dependency closure. Billed the same as a fresh run: 0.5 credits per FE rerun / 0.2 credits per BE rerun (legacy V2 accounts: FE rerun remains free).
  
  Exit codes:
    0  passed (or queued without --wait)
    1  failed / blocked / cancelled
    3  auth error
    4  test not found (single), or batch: nothing queued — every id had no replayable run
    5  validation error, or --all resolved zero tests (pass --allow-empty to exit 0)
    6  conflict (already running — see nextAction for the active runId)
    7  timeout or deferred — resume with: testsprite test wait <run-id>, or stop it with: testsprite test cancel <run-id>
   11  rate limited — honor Retry-After
  
  On failure/blocked/cancelled, run: testsprite test artifact get <run-id>
  
  Ctrl-C during --wait detaches only (the run keeps executing and billing);
  stop it for real with: testsprite test cancel <run-id>
  flaky [options] <test-id>             Repeatedly replay a test to measure stability and surface flakiness.
  Replays run with auto-heal OFF (strict verbatim) so healed drift cannot mask nondeterministic pass/fail.
  
  Exit codes:
    0  stable (every attempt passed)
    1  flaky or failing (at least one attempt did not pass)
    3  auth error
    4  test not found (no replayable run — trigger \`testsprite test run <id>\` first)
    5  validation error
  code                                  Inspect and edit generated test code
  plan                                  Generate + accept AI test plans (V3),
                                        and manage FE plan-steps
  failure                               Export the latest-failure agent bundle
  artifact                              Download run-scoped artifact bundles
                                        (M3.3 piece-4)
  cancel <run-id...>                    Cancel one or more queued/running runs.
  
  Ctrl-C during --wait only detaches — it does NOT cancel the server-side
  run. This is the real stop button. A frontend V3 run cancelled before a
  terminal state has its original charge returned; an uncharged run says so.
  Backend and V2 runs keep their existing billing behavior; an in-flight Lambda
  finishes on its own and its result is discarded once cancelled.
  
  Exit codes:
    0  cancelled (fresh or already-cancelled — naturally idempotent)
    4  run id not found (single id), or ANY id not found (multi-id — outranks conflict)
    6  run already terminal (passed/failed/blocked) — single id: 409; multi-id: any conflict
  
  Multi-id output is a summary: {cancelled, alreadyCancelled, conflicts, notFound}.
  help [command]                        display help for command
"
`;

exports[`--help snapshots > test cancel 1`] = `
"Usage: testsprite test cancel [options] <run-id...>

Cancel one or more queued/running runs.

Ctrl-C during --wait only detaches — it does NOT cancel the server-side
run. This is the real stop button. A frontend V3 run cancelled before a
terminal state has its original charge returned; an uncharged run says so.
Backend and V2 runs keep their existing billing behavior; an in-flight Lambda
finishes on its own and its result is discarded once cancelled.

Exit codes:
  0  cancelled (fresh or already-cancelled — naturally idempotent)
  4  run id not found (single id), or ANY id not found (multi-id — outranks conflict)
  6  run already terminal (passed/failed/blocked) — single id: 409; multi-id: any conflict

Multi-id output is a summary: {cancelled, alreadyCancelled, conflicts, notFound}.

Arguments:
  run-id      one or more run ids to cancel

Options:
  -h, --help  display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test code get 1`] = `
"Usage: testsprite test code get [options] <test-id>

Print the generated test code

Options:
  --out <path>  Write the response to this file instead of stdout (text mode:
                source body; json mode: wire envelope)
  -h, --help    display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test create 1`] = `
"Usage: testsprite test create [options]

Create a test from saved code (--code-file) or an agent-supplied plan
(--plan-from, FE-only, M3.2 piece-5)

Options:
  --project <id>             project id (returned by \`testsprite project list\`)
  --type <type>              frontend|backend
  --name <name>              human-readable test name (becomes \`title\` in
                             storage)
  --description <text>       optional human description (≤ 2000 chars)
  --priority <prio>          optional priority — one of: p0, p1, p2, p3
  --step-timeout <ms>        per-test step timeout in milliseconds (1-60000);
                             applied by the execution engine to every step of
                             this test
  --code-file <path>         file containing the test code (≤ 350 KB)
  --plan-from <path>         JSON file with the full FE test definition —
                             projectId, type, name, planSteps[] all live in the
                             file (≤ 256 KB; mutually exclusive with
                             --code-file). In this mode
                             --project/--type/--name/--description/--priority/--step-timeout
                             are ignored.
  --plan-template            print a minimal valid plan-file skeleton to stdout
                             and exit (pure-local: no network, no credentials,
                             ignores every other flag). Pipe to a file and
                             edit: \`--plan-template > plan.json\`. (default:
                             false)
  --run                      after create, trigger the test. Combine with
                             --wait to block until terminal. (default: false)
  --wait                     with --run, poll until terminal status (default:
                             false)
  --timeout <s>              with --run --wait, max seconds to wait
  --target-url <url>         with --run, override the project default env URL.
                             Before triggering, a reachability preflight
                             refuses obviously-dead targets (DNS failure,
                             connection refused, a 502/503/504 gateway error)
                             so a doomed run never gets billed — see
                             --skip-preflight.
  --skip-preflight           skip the pre-charge --target-url reachability
                             probe. The probe runs from this machine, not from
                             the Lambda that executes the test, so it can
                             occasionally be wrong (e.g. an IP allowlist that
                             permits the Lambda but not this machine); use this
                             flag when you know better. Zero network calls when
                             set. (default: false)
  --idempotency-key <token>  opaque idempotency token (1-256 ASCII chars).
                             Defaults to a UUIDv4 minted per invocation; pin
                             one yourself for safe retries.
  --produces <var>           BE only: variable name this test captures
                             (repeatable). Drives dependency-aware wave
                             ordering on \`test rerun\` and \`test run --all\`.
                             (default: [])
  --needs <var>              BE only: variable name this test consumes
                             (repeatable). Use to declare upstream producer
                             dependencies. (default: [])
  --category <str>           BE only: test category. Use 'teardown' or
                             'cleanup' to mark a final-wave cleanup test.
  -h, --help                 display help for command

Plan file format (--plan-from <file>) — minimal valid example:

{
  "$schema": "https://raw.githubusercontent.com/TestSprite/testsprite-cli/v0.12.0/schemas/plan.schema.json",
  "projectId": "prj_abc123",
  "type": "frontend",
  "name": "Login rejects an empty password",
  "planSteps": [
    {
      "type": "action",
      "description": "Navigate to /login and submit the form with an empty password"
    },
    {
      "type": "assertion",
      "description": "Verify an inline error says the password is required"
    }
  ]
}

Print this exact skeleton:      testsprite test create --plan-template
Validate offline (no network):  testsprite test create --plan-from <file> --dry-run
Multiple tests:                 test create-batch --plans <file.jsonl> | --plan-from-dir <dir>
Full field reference: DOCUMENTATION.md -> "Plan file format"


BE dependency authoring (M4):
  --produces/--needs drive wave ordering on \`test rerun\` + \`test run --all\`.
  --category teardown  marks a final-wave cleanup test.
  These flags are backend-only; supplying with --type frontend is an error (exit 5).

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test create-batch 1`] = `
"Usage: testsprite test create-batch [options]

Create multiple FE tests from a JSONL of plan specs (FE-only)

Options:
  --plans <path>             JSONL file with one plan-from spec per line (≤ 50
                             specs, ≤ 5 MB)
  --plan-from-dir <dir>      directory of *.json plan files — each file is one
                             plan spec (≤ 50 files, ≤ 5 MB total). Sorted by
                             filename for determinism. Mutually exclusive with
                             --plans.
  --run                      after create, trigger each created test as a run
                             (default: false)
  --max-concurrency <n>      with --run, max in-flight triggers at once (1-100,
                             default: 50). The server caps run-triggers at
                             60/min/key; the CLI throttles to 50/min and
                             auto-retries RATE_LIMITED responses client-side —
                             raising this value does not bypass the server cap.
  --wait                     with --run, poll each run until terminal status
                             (default: false)
  --timeout <s>              with --run --wait, per-run max seconds to wait
                             (1-3600, default 600)
  --target-url <url>         with --run, override the project default env URL
                             for each run. Before the fan-out, a reachability
                             preflight refuses an obviously-dead target ONCE
                             for the whole batch (DNS failure, connection
                             refused, a 502/503/504 gateway error) — see
                             --skip-preflight.
  --skip-preflight           skip the pre-charge --target-url reachability
                             probe. The probe runs from this machine, not from
                             the Lambda that executes the test, so it can
                             occasionally be wrong (e.g. an IP allowlist that
                             permits the Lambda but not this machine); use this
                             flag when you know better. Zero network calls when
                             set. (default: false)
  --idempotency-key <token>  opaque idempotency token for the batch create
                             (1-256 ASCII chars). Defaults to a UUIDv4 minted
                             per invocation; pin one yourself for safe retries.
  -h, --help                 display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test failure get 1`] = `
"Usage: testsprite test failure get [options] <test-id>

Write a self-contained failure-context bundle for a test's latest failing run

Options:
  --out <dir>    Directory to write the §7 disk layout into (default: print
                 wire envelope to stdout)
  --failed-only  Trim to the failed step ±1. The bundle is already
                 failure-focused server-side, so this is usually a no-op; use
                 \`test steps <id>\` for the full run trail.
  -h, --help     display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test flaky 1`] = `
"Usage: testsprite test flaky [options] <test-id>

Repeatedly replay a test to measure stability and surface flakiness.
Replays run with auto-heal OFF (strict verbatim) so healed drift cannot mask nondeterministic pass/fail.

Exit codes:
  0  stable (every attempt passed)
  1  flaky or failing (at least one attempt did not pass)
  3  auth error
  4  test not found (no replayable run — trigger \`testsprite test run <id>\` first)
  5  validation error

Options:
  --runs <n>     number of replays to run (1-10, default 5)
  --until-fail   stop at the first non-passing attempt (fast "is it flaky at
                 all?" check) (default: false)
  --timeout <s>  per-attempt max seconds to wait (1-3600, default 600)
  -h, --help     display help for command

Notes:
  • Each replay is billed as a rerun — 0.5 credits for a frontend replay (verbatim
    script), 0.2 credits for a backend replay (re-runs the dependency closure) —
    same price as a fresh run, so \`--runs N\` costs roughly N×0.5 credits for a
    frontend test (legacy V2 accounts: FE rerun remains free). A one-line advisory
    is printed before a backend replay.
  • Replays use auto-heal OFF so a flaky test is not silently "healed" into a pass;
    this measures replay stability of the saved script against the configured URL.
  • \`--output json\` emits a machine-readable stability report for CI gating.

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test get 1`] = `
"Usage: testsprite test get [options] <test-id>

Get a test by id

Options:
  -h, --help  display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test list 1`] = `
"Usage: testsprite test list [options]

List tests in a project

Options:
  --project <id>            project id (returned by \`testsprite project list\`)
  --type <type>             filter by test type (frontend|backend)
  --created-from <source>   filter by where the test was authored
                            (portal|mcp|cli)
  --status <list>           filter by normalized status (comma-separated). One
                            of: draft, ready, queued, running, passed, failed,
                            blocked, cancelled, unknown — M2.1
  --page-size <n>           service page-size hint (1-100, default 25)
  --starting-token <token>  opaque cursor from a previous list response
  --cursor <token>          alias for --starting-token; accepted for parity
                            with \`test result --history\`
  --max-items <n>           stop after this many items across auto-paged pages
  --columns <list>          select/reorder text table columns (comma-separated
                            keys)
  --no-header               suppress the text table header row
  -h, --help                display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test plan 1`] = `
"Usage: testsprite test plan [options] [command]

Generate + accept AI test plans (V3), and manage FE plan-steps

Options:
  -h, --help               display help for command

Commands:
  put [options] <test-id>  Replace an FE test's planSteps[] (BE tests return
                           400 → use 'test code put')
  generate [options]       Generate AI test-case proposals for a project — runs
                           only the missing pipeline stages and stages the
                           results server-side for review (nothing is written
                           locally)
  accept [options]         Convert staged proposals into real test cases (free)
                           — all of them, or a subset with --only
  help [command]           display help for command
"
`;

exports[`--help snapshots > test plan accept 1`] = `
"Usage: testsprite test plan accept [options]

Convert staged proposals into real test cases (free) — all of them, or a subset
with --only

Options:
  --project <id>             project id (V3-native; V2 ids resolve through the
                             migration bridge)
  --only <ids...>            accept only these proposal ids (space- or
                             comma-separated; the ids come from the \`test plan
                             generate\` table). Accepting a subset discards the
                             rest. ANY id that matches no staged proposal is a
                             validation error — the request is never sent.
  --idempotency-key <token>  opaque idempotency token (1-256 ASCII chars).
                             Defaults to a UUIDv4 minted per invocation; pin
                             one yourself for safe retries.
  -h, --help                 display help for command

Notes:
  - Accepting adds no charge of its own; generation already did the work.
  - API test code is generated when the tests first run, not at accept.
  - Accepting a subset discards the remaining staged proposals (the staging
    area is cleared either way) — the output says how many were discarded.
  - Nothing staged → exit 6 with a pointer at \`test plan generate\`.


Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test plan generate 1`] = `
"Usage: testsprite test plan generate [options]

Generate AI test-case proposals for a project — runs only the missing pipeline
stages and stages the results server-side for review (nothing is written
locally)

Options:
  --project <id>             project id (V3-native; V2 ids resolve through the
                             migration bridge)
  --timeout <seconds>        total wait budget in seconds (1-3600, default
                             1800; exploration takes minutes on a fresh
                             frontend project)
  --idempotency-key <token>  opaque idempotency token (1-256 ASCII chars).
                             Defaults to a UUIDv4 minted per invocation; pin
                             one yourself for safe retries.
  -h, --help                 display help for command

Behavior:
  - Only the stages the project is missing actually run; a second call
    resumes rather than starting over.
  - Proposals are STAGED on the server for review; nothing is written to disk.
  - Re-running the command re-attaches to an in-flight stage (409 attaches).
  - Ctrl-C detaches locally; server-side work and charges continue.
  - Exit 7 on --timeout: re-run the same command to re-attach.
  - Workspace credits are spent per stage that runs; the result line reports
    what THIS run charged (omitted when nothing new was charged).
    \`testsprite usage\` shows your balance.

Next step: review the printed table, then \`testsprite test plan accept\`.


Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test rerun 1`] = `
"Usage: testsprite test rerun [options] [test-ids...]

Re-execute a test (or multiple) as a replay — FE replays the saved script, BE re-runs the dependency closure. Billed the same as a fresh run: 0.5 credits per FE rerun / 0.2 credits per BE rerun (legacy V2 accounts: FE rerun remains free).

Exit codes:
  0  passed (or queued without --wait)
  1  failed / blocked / cancelled
  3  auth error
  4  test not found (single), or batch: nothing queued — every id had no replayable run
  5  validation error, or --all resolved zero tests (pass --allow-empty to exit 0)
  6  conflict (already running — see nextAction for the active runId)
  7  timeout or deferred — resume with: testsprite test wait <run-id>, or stop it with: testsprite test cancel <run-id>
 11  rate limited — honor Retry-After

On failure/blocked/cancelled, run: testsprite test artifact get <run-id>

Ctrl-C during --wait detaches only (the run keeps executing and billing);
stop it for real with: testsprite test cancel <run-id>

Options:
  --all                       rerun all tests in the resolved project (requires
                              --project) (default: false)
  --project <id>              project id (required with --all; returned by
                              \`testsprite project list\`)
  --skip-terminal             with --all: skip tests already in a terminal
                              status (passed|failed|blocked|cancelled)
                              (default: false)
  --status <list>             with --all: only dispatch tests whose status
                              matches one of these values (comma-separated;
                              accepted:
                              draft|ready|queued|running|passed|failed|blocked|cancelled|unknown)
  --filter <substr>           with --all: only rerun tests whose name contains
                              this substring (case-insensitive)
  --wait                      block until terminal status or --timeout elapses
                              (default: false)
  --timeout <s>               with --wait, max seconds to wait (1–3600, default
                              600)
  --no-auto-heal              opt out of AI heal-on-drift for this FE rerun
                              (default: auto-heal is ON). Costs 0.2 credits per
                              engage when a step has drifted. Ignored for
                              backend tests.
  --skip-dependencies         BE only: rerun only the named test without
                              expanding the producer/teardown closure (default:
                              false)
  --env <name>                replay against the named project environment —
                              its test-account credentials, auto-auth and OTP
                              settings (names: \`testsprite project env list
                              <project-id>\`). Omit to keep using the project's
                              default environment. Applies to every test of a
                              batch rerun.
  --max-concurrency <n>       with --wait, max in-flight polls at once (1-100,
                              default: 50)
  --idempotency-key <key>     opaque key for safe retries (1–256 chars).
                              Printed to stderr at --verbose if auto-generated.
  --report <format>           with batch --wait: write a JUnit XML sidecar
                              report after polling (accepted: junit)
  --report-file <path>        output path for --report (atomic write)
  --report-suite-name <name>  optional JUnit <testsuite name=...> override
                              (default: testsprite:<projectId>)
  --gh-output                 with batch --wait: emit GitHub-native output
                              (::error:: annotations for failed/timed-out runs,
                              ::warning:: for never-dispatched tests;
                              job-summary table when $GITHUB_STEP_SUMMARY is
                              set). Auto-enabled when GITHUB_ACTIONS=true
  --summary-file <path>       with batch --wait: also write the reduced machine
                              summary JSON {total, passed, failed, skipped,
                              timedOut, runs[]} to this file
  --allow-empty               with --all: exit 0 when the resolved test set is
                              empty (no tests match
                              --filter/--status/--skip-terminal, or the project
                              has none). Default: fail with exit 5 — a
                              zero-dispatch rerun is a CI false-green
  -h, --help                  display help for command

Notes:
  • rerun replays a saved run/script and is MORE LENIENT than a fresh \`test run\`
    (auto-heal can pass steps that have drifted) — for strict scoring/regression,
    prefer \`test run\`. The two are not interchangeable for pass-rate measurement.
  • Under --wait the per-request HTTP timeout is auto-raised to cover --timeout so a
    slow trigger/poll under load is not cut at the 120s default (see --request-timeout).
  • Batch --wait: rate-deferred tests appear in \`deferred[]\` and \`summary.deferred\`,
    and force a non-zero exit — they are NOT counted in \`summary.total\` (dispatched only).
  • On V3-routed accounts, --no-auto-heal is still rolling out and may not yet be
    honored server-side — check \`auth status\` for your routing.

Dry-run shape notes:
  • --dry-run shows the BE rerun wire shape (includes \`closure{}\`); FE rerun responses
    omit \`closure\` (or return it as null) since there is no dependency expansion.
  • \`autoHeal\` defaults true for FE reruns; BE reruns ignore the field entirely.

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test result 1`] = `
"Usage: testsprite test result [options] <test-id>

Get the latest result for a test (default) or list prior runs (--history).

--output json shape differs by mode:
  (default)  single CliLatestResult object
  --history  { runs: RunHistoryItem[], nextCursor: string|null }

Per-run detail: testsprite test wait <run-id>
Failure bundle:  testsprite test artifact get <run-id>

Options:
  --include-analysis  attach the inline \`analysis\` block (rootCauseHypothesis,
                      recommendedFixTarget, failureKind, snapshotId) — M2.1
                      (default: false)
  --history           list prior runs for this test instead of showing the
                      latest result
  --source <src>      with --history: filter by trigger source
                      (cli|portal|mcp|schedule|github_action)
  --since <dur>       with --history: lower bound on createdAt — 24h, 7d, or
                      ISO timestamp (client-side translated)
  --page-size <n>     with --history: number of runs per page (1–100, default
                      20)
  --cursor <token>    with --history: opaque cursor from a prior page
  --rerun             with --history: show only reruns
  --no-rerun          with --history: show only fresh (non-rerun) runs
  --env <name>        with --history: only runs whose credentials came from
                      this project environment
  --columns <list>    with --history: select/reorder text table columns
  --no-header         with --history: suppress the text table header row
  -h, --help          display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test run 1`] = `
"Usage: testsprite test run [options] [test-id]

Trigger a test run. With --wait, polls until terminal status.
Use --all --project <id> for a wave-ordered batch run of all tests in a project (M4).

Exit codes:
  0  passed (or queued without --wait)
  1  failed / blocked / cancelled
  3  auth error
  4  test not found
  5  validation error (e.g., bad --target-url, or positional + --all both set)
  6  conflict (already running — see nextAction for the active runId)
  7  timeout — resume with: testsprite test wait <run-id>, or stop it with: testsprite test cancel <run-id>
 10  transport/network failure (UNAVAILABLE) — retry the command
 11  rate limited — honor Retry-After

On failure/blocked/cancelled, run: testsprite test artifact get <run-id>

Ctrl-C during --wait detaches only (the run keeps executing and billing);
stop it for real with: testsprite test cancel <run-id>

Options:
  --target-url <url>          override the project default env URL for this run
                              (http/https only, no localhost/private IPs).
                              Before triggering, a reachability preflight
                              refuses an obviously-dead target (DNS failure,
                              connection refused, a 502/503/504 gateway error)
                              so a doomed run never gets billed. This CLI
                              probes from wherever it runs, not from the Lambda
                              that executes the test, so it is a heuristic, not
                              a guarantee — see --skip-preflight. Note: for a
                              backend test, --target-url itself is inert (its
                              base URL is baked into its code) — but this bare
                              \`run\` command has no way to know a test's type
                              before triggering it, so the preflight still runs
                              and can still refuse; use --skip-preflight if
                              that surprises you.
  --skip-preflight            skip the pre-charge --target-url reachability
                              probe. The probe runs from this machine, not from
                              the Lambda that executes the test, so it can
                              occasionally be wrong (e.g. an IP allowlist that
                              permits the Lambda but not this machine); use
                              this flag when you know better. Zero network
                              calls when set. (default: false)
  --local <port>              run against an app on THIS machine, reached
                              through a TestSprite tunnel. The test runner
                              navigates to http://127.0.0.1:<port> and its
                              traffic is proxied back to you for as long as
                              this command runs. Implies --wait (the tunnel
                              closes when the command exits, so a detached run
                              could not finish) and cannot be combined with
                              --target-url. Frontend tests only. Before
                              anything is minted or billed, the port is probed
                              and a dead one is refused.
  --local-host <host>         with --local, which loopback address to name in
                              the run's target URL — one of localhost,
                              127.0.0.1, ::1 (default 127.0.0.1). Use localhost
                              if your app only answers on that name, or ::1 for
                              an IPv6-only listener.
  --tunnel-client <id>        with --local, attach to a tunnel already running
                              under \`testsprite tunnel start\` instead of
                              opening a new one. The id is the non-secret
                              handle that command prints; the tunnel stays
                              owned by that process and is not closed when this
                              run finishes.
  --no-cancel-on-interrupt    with --local, skip automatic cancellation when an
                              owned tunnel is about to close or a borrowed
                              tunnel's owner disappears. An ordinary interrupt
                              of a borrowed run never cancels it because its
                              tunnel remains alive.
  --env <name>                run against the named project environment — its
                              test-account credentials, auto-auth and OTP
                              settings (names: \`testsprite project env list
                              <project-id>\`). Combine with --local to use those
                              credentials against your own machine, or with
                              --target-url against another address; without
                              either, the run opens that environment's URL.
                              Omit --env to keep using the project's default
                              environment. Also applies with --all.
  --wait                      poll until terminal status or --timeout elapses
                              (default: false)
  --timeout <s>               with --wait, max seconds to wait (1–3600; default
                              600, or 1200 with --local)
  --idempotency-key <key>     opaque key for safe retries (1–256 chars).
                              Printed to stderr at --debug if auto-generated.
  --all                       run all tests in the project (wave-ordered fresh
                              run; uses --project or TESTSPRITE_PROJECT_ID).
                              Mutually exclusive with <test-id>. (default:
                              false)
  --project <id>              project id (with --all, overrides
                              TESTSPRITE_PROJECT_ID; returned by \`testsprite
                              project list\`)
  --filter <substr>           with --all: only run tests whose name contains
                              this substring (case-insensitive)
  --max-concurrency <n>       with --all --wait, max in-flight polls at once
                              (1-100, default: 50)
  --report <format>           with --all --wait: write a JUnit XML sidecar
                              report after polling (accepted: junit)
  --report-file <path>        output path for --report (atomic write)
  --report-suite-name <name>  optional JUnit <testsuite name=...> override
                              (default: testsprite:<projectId>)
  --gh-output                 with --wait (single test or --all): emit
                              GitHub-native output (::error:: annotations for
                              failed/timed-out runs, ::warning:: for
                              never-dispatched tests; job-summary table when
                              $GITHUB_STEP_SUMMARY is set). Auto-enabled when
                              GITHUB_ACTIONS=true
  --summary-file <path>       with --wait (single test or --all): also write
                              the reduced machine summary JSON {total, passed,
                              failed, skipped, timedOut, runs[]} to this file
  --allow-empty               with --all: exit 0 when the run dispatches ZERO
                              tests (all skipped / empty project / --filter
                              matched nothing). Default: fail with exit 5 — a
                              zero-dispatch run is a CI false-green
  -h, --help                  display help for command

Dependency-aware fresh run (M4):
  testsprite test run --all --project <id>                run all project tests in wave order
  TESTSPRITE_PROJECT_ID=<id> testsprite test run --all    use env default project
  testsprite test run --all --filter <substr>             name-glob subset (uses --project/env)
  testsprite test run --all --wait --report junit --report-file ./results.xml
  project id precedence: --project wins over TESTSPRITE_PROJECT_ID

BE tests can declare --produces/--needs at create time to drive wave ordering
(see \`testsprite test create --help\` for details).

Frontend tests: the current unified engine runs FE tests too (they are billed
like any run). On the legacy backend-only engine FE tests cannot run — they are
reported under skippedFrontend with an advisory; run those with 'test run <id>'.

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > test steps 1`] = `
"Usage: testsprite test steps [options] <test-id>

List the steps of the latest run (use --run-id for a specific run)

Options:
  --page-size <n>           service page size hint (1-100, default 25)
  --max-items <n>           stop after this many items across auto-paged pages
  --starting-token <token>  opaque cursor from a previous response
  --run-id <id>             Show steps of the specified run instead of the
                            latest run.
  -h, --help                display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > testlist 1`] = `
"Usage: testsprite testlist [options] [command]

Manage test lists (groups of tests)

Options:
  -h, --help                               display help for command

Commands:
  list [options]                           List test lists visible to the API key
  get <list-id>                            Get a test list with its cases
  create [options]                         Create a test list
  update [options] <list-id>               Update a test list (name and/or environments)
  delete [options] <list-id>               Delete a test list and its schedules (requires --confirm)
  add [options] <list-id> <test-id...>     Add one or more tests to a test list
  remove [options] <list-id> <test-id...>  Remove one or more tests from a test list
  run [options] <list-id>                  Run a test list (dispatch its cases and return pollable run ids)
  help [command]                           display help for command
"
`;

exports[`--help snapshots > testlist add 1`] = `
"Usage: testsprite testlist add [options] <list-id> <test-id...>

Add one or more tests to a test list

Options:
  --idempotency-key <key>  caller-supplied idempotency key (1-256 chars)
  -h, --help               display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > testlist create 1`] = `
"Usage: testsprite testlist create [options]

Create a test list

Options:
  --name <name>                  test-list name (required)
  --project-env <projectId:env>  project+environment pair the list runs against
                                 (repeatable) (default: [])
  --idempotency-key <key>        caller-supplied idempotency key (1-256 chars)
  -h, --help                     display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > testlist delete 1`] = `
"Usage: testsprite testlist delete [options] <list-id>

Delete a test list and its schedules (requires --confirm)

Options:
  --confirm                confirm the destructive delete (required unless
                           --dry-run)
  --idempotency-key <key>  caller-supplied idempotency key (1-256 chars)
  -h, --help               display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > testlist get 1`] = `
"Usage: testsprite testlist get [options] <list-id>

Get a test list with its cases

Options:
  -h, --help  display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > testlist list 1`] = `
"Usage: testsprite testlist list [options]

List test lists visible to the API key

Options:
  --columns <list>  select/reorder text table columns (comma-separated keys)
  --no-header       suppress the text table header row
  -h, --help        display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > testlist remove 1`] = `
"Usage: testsprite testlist remove [options] <list-id> <test-id...>

Remove one or more tests from a test list

Options:
  --idempotency-key <key>  caller-supplied idempotency key (1-256 chars)
  -h, --help               display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > testlist run 1`] = `
"Usage: testsprite testlist run [options] <list-id>

Run a test list (dispatch its cases and return pollable run ids)

Options:
  --case <test-id>            run only this case (repeatable; default: every
                              case in the list) (default: [])
  --wait                      poll every dispatched run until terminal or
                              --timeout (default: false)
  --timeout <s>               with --wait, max seconds to wait (1–3600, default
                              600)
  --max-concurrency <n>       with --wait, max in-flight polls at once (1-50,
                              default 10)
  --idempotency-key <key>     caller-supplied idempotency key (1-256 chars)
  --report <format>           with --wait: write a JUnit XML sidecar after
                              polling (accepted: junit)
  --report-file <path>        output path for --report (atomic write)
  --report-suite-name <name>  JUnit <testsuite name=...> override (default:
                              testsprite:testlist:<listId>)
  --gh-output                 with --wait: emit GitHub-native output (::error::
                              annotations for failed/timed-out members,
                              ::warning:: for never-dispatched ones;
                              job-summary table when $GITHUB_STEP_SUMMARY is
                              set). Auto-enabled when GITHUB_ACTIONS=true
  --summary-file <path>       with --wait: also write the reduced machine
                              summary JSON {total, passed, failed, skipped,
                              timedOut, runs[]} to this file
  -h, --help                  display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > testlist update 1`] = `
"Usage: testsprite testlist update [options] <list-id>

Update a test list (name and/or environments)

Options:
  --name <name>                  new name
  --project-env <projectId:env>  replace the env mapping with these pairs
                                 (repeatable) (default: [])
  --clear-project-env            remove all environment mappings from the list
  --idempotency-key <key>        caller-supplied idempotency key (1-256 chars)
  -h, --help                     display help for command

Global options (--dry-run, --output, --profile, --endpoint-url, --request-timeout, --verbose, --debug):
  testsprite --help
"
`;

exports[`--help snapshots > top 1`] = `
"Usage: testsprite [options] [command]

Official TestSprite command-line interface

Options:
  -V, --version                output the version number
  --output <mode>              Output format (json|text) (default: "text")
  --profile <name>             Configuration profile to use
  --endpoint-url <url>         Override the API endpoint host
  --verbose                    Emit human-readable HTTP retry / backoff /
                               polling-mode transitions to stderr. Less noisy
                               than --debug; useful for diagnosing hangs
                               without the full trace.
  --debug                      Print HTTP method/path, request id, latency,
                               retry decisions to stderr
  --dry-run                    Skip the network and credentials; emit a canned
                               sample matching the OpenAPI contract. Useful for
                               learning the CLI surface without an API key.
                               Note: file inputs you pass
                               (--plan-from/--plans/--steps) are still read and
                               validated locally; only --code-file uses a
                               placeholder.
  --request-timeout <seconds>  Client-side per-request timeout in seconds
                               (default: 120). Aborts any single fetch that
                               does not complete within this deadline. Override
                               via TESTSPRITE_REQUEST_TIMEOUT_MS env var
                               (milliseconds). Range: 1–600. Does not affect
                               the --timeout polling ceiling for \`test
                               run/wait\`.
  -h, --help                   display help for command

Commands:
  setup [options]              Set up TestSprite: configure your API key and
                               install the TestSprite agent skills for your
                               coding agent
  auth                         Manage TestSprite credentials
  project                      Manage TestSprite projects
  test                         Inspect TestSprite tests
  testlist                     Manage test lists (groups of tests)
  ci                           Scaffold CI integration for TestSprite
  schedule                     Manage TestSprite schedules
  tunnel                       Open a tunnel so TestSprite can reach an app on
                               this machine
  agent                        Install TestSprite guidance into coding-agent
                               config (Claude Code, Cursor, Cline, Antigravity,
                               Kiro, Windsurf, Copilot, Codex)
  usage|credits                Show credit balance and plan/entitlement info
                               (proactive pre-flight before a large test run)
  doctor                       Diagnose CLI setup: version, Node, profile,
                               endpoint, credentials, connectivity, skill
  completion [shell]           Print a shell completion script (bash|zsh|fish)
  help [command]               display help for command
"
`;
